--- a/web/src/global.css
+++ b/web/src/global.css
@@ -15,3 +15,7 @@ body{
   background: #E5E6F0;
   -webkit-font-smoothing: antialiased;
 }
+
+body, input, button{
+  font-family: Roboto, sans-serif;
+}
